<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hostelmanager.hostelmasterr.review_edit"
    android:background="@drawable/complete03">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/enter_details"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/gray"
            android:text="@string/review_edit"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold"
            />

        <TextView
            style="@style/space_between"
            android:id="@+id/property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/total_bedroom"
            style="@style/space_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_bedrooms" />

        <TextView
            android:id="@+id/adress_1"
            style="@style/space_between"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:hint="@string/address_1"
            />

        <TextView
            android:id="@+id/address_2"
            style="@style/space_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_2" />

        <TextView
            android:id="@+id/total_bed"
            style="@style/space_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_beds" />

        <TextView
            style="@style/space_between"
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state" />

        <TextView
            style="@style/space_between"
            android:id="@+id/post_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_code"
            />

        <TextView
            style="@style/space_between"
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            />

        <TextView
            style="@style/space_between"
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"/>

        <TextView
            style="@style/space_between"
            android:id="@+id/contact_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_details"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="25sp"/>

        <TextView
            style="@style/space_between"
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name" />

        <TextView
            style="@style/space_between"
            android:id="@+id/manager_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manager_email" />

        <TextView
            style="@style/space_between"
            android:id="@+id/booking_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/booking_email" />

        <TextView
            style="@style/space_between"
            android:id="@+id/contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number" />

        <TextView
            style="@style/space_between"
            android:id="@+id/contact_number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number2"/>

        <Button
            style="@style/btnbackground"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:id="@+id/edit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            style="@style/btnbackground"
            android:id="@+id/submit"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>
