<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.hostelmanager.hostelmasterr.propertysignup"
    android:background="@drawable/phrse02">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >




        <TextView
            android:id="@+id/review_edit"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/gray"
            android:text="@string/property_signup"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold"
            />

        <EditText
            style="@style/space_between"
            android:id="@+id/property_name"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/property_name"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/total_bed"
            style="@style/space_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/total_beds"
            android:inputType="number" />

        <EditText
            style="@style/space_between"
            android:id="@+id/total_bedroom"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/total_bedrooms"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/state"
            style="@style/space_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/adress_1"
            style="@style/space_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/address_1"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/address_2"
            style="@style/space_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/address_2"
            android:inputType="textPostalAddress" />

        <EditText
            style="@style/space_between"
            android:id="@+id/post_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/post_code"
            />

        <EditText
            style="@style/space_between"
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/country"
            />

        <EditText
            style="@style/space_between"
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/city"/>

        <TextView
            style="@style/space_between"
            android:id="@+id/contact_details"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/contact_details"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="25sp"/>

        <EditText
            style="@style/space_between"
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/contact_name" />

        <EditText
            style="@style/space_between"
            android:id="@+id/manager_email"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/manager_email" />

        <EditText
            style="@style/space_between"
            android:id="@+id/booking_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/booking_email" />

        <EditText
            style="@style/space_between"
            android:id="@+id/contact_number"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_number" />

        <EditText
            style="@style/space_between"
            android:id="@+id/contact_number2"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_number2"/>

        <Button
            style="@style/btnbackground"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:id="@+id/sing_up_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />



    </LinearLayout>

</ScrollView>
