<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hostelmanager.hostelmasterr.workwithus"
    android:background="@drawable/complete03">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
         />


    <TextView
        android:id="@+id/signuptxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/signuptxt"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        style="@style/colorfreetojoin"
        android:layout_marginTop="2dp"
        android:layout_width="174dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"

        android:drawableStart="@drawable/ic_thumb_up_black_24dp"
        android:paddingLeft="5dp"
        android:text="@string/free_to_join"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/freedetails"
        android:layout_gravity="center"
        style="@style/detailhadding"
        android:text="@string/freedetails"
        android:layout_marginTop="2dp"
         />



    <TextView
        android:id="@+id/management"
        android:layout_gravity="center"
        style="@style/colorfreetojoin"
        android:layout_marginTop="2dp"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_hotel_black_24dp"
        android:text="@string/Inventory_management"
        />

    <TextView
        android:id="@+id/managedetails"
        style="@style/detailhadding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/manage_details" />

    <TextView
        android:id="@+id/instant_booking"
        style="@style/colorfreetojoin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:text="@string/Instant_booking"
        />

    <TextView
        android:id="@+id/instant_details"
        style="@style/detailhadding"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/Instant_details"
        />
    <Button

    android:id="@+id/click_here_to_start"
    style="@style/btnbackground"
    android:layout_width="250dp"
    android:layout_height="49dp"
        android:layout_gravity="center"
   android:layout_marginTop="60dp"
    android:text="@string/click_here_to_start"
    />
</LinearLayout>
</ScrollView>