<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    >


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/college_Name"
        android:layout_alignStart="@+id/college_Name"
        android:layout_below="@+id/college_Name"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/college_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/student_name"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:text="@string/college_name"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/college_Name"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/college_Name"
        android:layout_marginTop="14dp"
        android:text="@string/student_name"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/student_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="16dp"
        android:hint="--"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btn_get_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/get_your_token" />

    <TextView
        android:id="@+id/date_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/btn_get_token"
        android:layout_marginTop="15dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:hint="" />

    <TextView
        android:id="@+id/validate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_show"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="Not Allowed"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>
